--- a/数组&面向对象.md
+++ b/数组&面向对象.md
@@ -312,24 +312,62 @@ super关键字是父类的引用，用于访问父类的属性、方法、构造
   3. 运行类型可以变化
   4.  声明对象时，`=`左边为编译类型，`=`右边为运行类型
 
-
-
 ```java
 Animal animal = new Dog(); // 可以让一个父类的引用指向一个子类的对象。编译类型是Animal，运行类型是Dog。
 animal = new Cat(); // 此时运行类型是Cat，编译类型仍然是Animal
 ```
 
+#### 向上转型
+
+* 本质：父类的引用指向子类的对象
+
+  ```java
+  Object obj = new Cat();
+  ```
+
+* 此时可以按访问权限调用父类（编译类型）中的所有成员，但不能调用子类（运行类型）的特有成员。
+
+  最终运行效果按照子类（运行类型）的具体实现。
+
+  即：只能调用父类本身的方法，或是子类重写父类的方法。
+
+  * 在编译阶段，能够调用哪些成员，由编译类型决定
+  * 方法的具体运行由运行类型决定
+
+#### 向下转型
+
+* 即将父类的引用强制类型转换为子类的引用
+
+  ```java
+  Animal animal = new Cat(); // 对象本身就是Cat类型
+  Cat cat = (Cat)animal;// 只能转换成Cat类型，不可以转换成其他类
+  ```
+
+* 只能转换父类的引用，无法改变对象。
+
+* 向下转型后即可调用子类的成员
+
+* 属性直接由编译类型决定。不会类似方法的子类对父类重写的设定。
+
+  ```java
+  // Animal的age是10，Cat的age是20
+  Animal animal = new Cat();
+  System.out.println(animal.age); // 10
+  ```
+
+#### instanceOf运算符
+
+* `A instanceOf B`如果A与B**运行**类型一致或A是B的子类型，则返回true；否则返回false。
+
+  ```java
+  // Father是Son的父类
+  Father father = new Son(); // father的编译类型是Father，运行类型是Son
+  System.out.println(father instanceOf Son); // 输出为true，比较的是运行类型Son
+  ```
+
+#### 动态绑定机制
 
 
-* 向上转型：
-
-  * 本质：父类的引用指向子类的对象
-
-    ```java
-    Object obj = new Cat();
-    ```
-
-  * 
 
 
 
@@ -357,6 +395,7 @@ animal = new Cat(); // 此时运行类型是Cat，编译类型仍然是Animal
   * main
   * fori：for循环
   * sout
+* 显示类的属性和方法：左侧Structure按钮
 
 ## 包
 
@@ -380,7 +419,7 @@ animal = new Cat(); // 此时运行类型是Cat，编译类型仍然是Animal
   * 导入整个包
 
     ```java
-    import java.util.*; // 引入整个util包
+    import java.util.*; // 通过*引入整个util包
     ```
 
 * package语法用于打包，声明当前类所属的包，需要放在类的最上面，一个类中只能有一个package指令
