--- a/12.注解.md
+++ b/12.注解.md
@@ -3,9 +3,35 @@
 ​	注解(Annotation)也被称为元数据(Metadata)，用于修饰解释包、类、方法、属性、构造器、局部变量等。
 
 * 和注释一样，注解不影响程序逻辑，但可以被编译运行。
+
 * Java SE中注解的使用比较简单，主要起到标记的功能；在Java EE中注解占据更重要的角色，比如配置应用程序切面、代替XML等。
 
 * 三个基本的annotation：
   * @Override:限定某个方法是重写父类的方法，只能用于方法。编译器会进行语法检查。
-  * @Deprecated:表示某个程序元素（类、方法等）已过时。
+  
+  * @Deprecated:表示某个程序元素（类、方法等）已过时。不推荐使用，但仍可以使用。
+  
+    可以修饰方法、类、字段、包、参数等。
+  
+    ```java
+    @Target(value={CONSTRUCTOR, FIELD, LOCAL_VARIABLE, METHOD, PACKAGE, MODULE, PARAMETER, TYPE})
+    ```
+  
   * @SuppressWarnings:抑制编译器警告。
+  
+    `@SuppressWarnings{"[抑制警告类型1],[抑制警告类型2]..."}`
+  
+    * all：抑制所有警告。
+    * 其他类型需要在查。
+
+* 元注解：修饰注解的注解。
+
+  * @Target：来指定注解能修饰哪些元素，比如`ElementType.METHOD`限制只能修饰方法。
+  * @Retention：指定该注解能保留的范围。
+    * SOURCE：只保留在java源文件中，编译器不保留。
+    * CLASS：保留在编译后的class文件中，运行时不保留。
+    * RUNTIME：运行时会保留该注解。
+  * @Documented：让注解会在javadoc中体现。
+  * @Inherited：如果某个类使用了被@Inherited修饰的Annotation，则子类将自动具有该注解。
+  
+  
