--- a/14.包装类&String类.md
+++ b/14.包装类&String类.md
@@ -230,6 +230,10 @@
     System.out.println("helloabc" == c);// false
     ```
 
+* toCharArray()：将`String`对象转换成`char[]`类型。
+
+  可以通过构造器`String(char[])`或`String.valueOf(char[])`将char数组转换成String。
+
 #### String类的方法
 
 ​	String每次更新都需要重新开辟空间，效率较低，因此java还提供了StrinBuilder和StringBuffer来增强String功能、提高效率。
@@ -243,4 +247,30 @@
 #### 个人补充
 
 * java中的string没有结束符\0，不同于c。
+
+* 对于String类内存机制的总结：
+
+  String类有两种存储方式：
+
+  * 栈中的引用直接指向常量区的字符串常量：
+
+    * 直接使用字符串常量进行赋值。
+    * 使用字符串常量进行拼接。
+
+    ```java
+    String str1 = "abc";
+    String str2 = "abc" + "123";
+    ```
+
+  * 栈中的引用指向堆中的String对象，通过其value属性指向常量区的字符串常量：
+
+    * 使用构造器进行初始化。
+    * 使用变量进行拼接。
+
+    ```java
+    String str3 = new String("abc");
+    String str4 = str1 + str2;
+    ```
+
+    
 
