--- a/15.StringBuffer & StringBuilder.md
+++ b/15.StringBuffer & StringBuilder.md
@@ -29,6 +29,8 @@
     StringBuffer stringBuffer = new StringBuffer("str");
     ```
 
+    ​	查看源码(StringBuffer(String str)类型的构造器)，如果传入的字符串为null，在调用父类方法`AbstractStringBuilder`时会访问`str.length`，会导致抛出空指针异常。
+
   * 使用StringBuffer的append方法：
 
     ```java
@@ -55,6 +57,8 @@
 
   将输入参数转换为字符串拼接。
 
+  查看源码，如果拼接null，会直接将`"null"`这个字符串进行拼接。
+
 * delete(11,14)
 
   删除`[11,14)`的字符。
@@ -63,7 +67,26 @@
 
   在索引为9的位置插入字符串，原先内容顺次后移。
 
-  
+
+## StringBuilder类
+
+​	一个可变的字符序列，API与StringBuffer兼容，但不保证同步（StringBuilder类不是线程安全的）。用于字符串缓冲区被**单个线程**使用时StringBuffer的简易替换。
+
+* StringBuilder类的继承关系、接口实现与StringBuffer一致。
+* StringBuilder的字符序列也是存放在父类的`char[] value(byte[] value)`中，与StringBuffer一样。
+* StringBuilder的方法，没有做互斥处理，即没有synchronized关键字，因此应在单线程情况下使用StringBuilder。
+
+## String、StringBuffer、StringBuilder对比
+
+* String：不可变字符序列，效率低，但复用率高。
+
+  多次执行修改字符串内容的操作，会导致大量副本字符串对象留在内存中，降低效率。
+
+  :star:因此如果要对字符串进行大量修改，不要使用String。
+
+* StringBuffer：可变字符序列、增删效率高、线程安全。
+
+* StringBuilder：同StringBuffer，线程不安全。
 
 
 
