--- a/3.IDEA使用.md
+++ b/3.IDEA使用.md
@@ -22,6 +22,9 @@
 * main
 * fori：for循环
 * sout
+* alt+insert：与右键->Generate效果一致。
+* ctrl+j：生成for循环等包裹代码的模板。
+* 集合名.for：使用迭代器的增强for循环。也可以直接使用`I`。
 
 ## 查看源码
 
@@ -49,3 +52,19 @@
     1. 进入`Setting->Build,Execution,Deployment->Debugger->Stepping`。
 
     2. Do not step into the classes中，取消勾选`ajva.*`,`javax.*`。
+
+* 设置调式数据，显示详细：
+
+  * File | Settings | Build, Execution, Deployment | Debugger | Data Views | Java
+
+    去掉勾选`Hide null elements in arrays and collections`和`Enable alternative view for Collections classes`。
+
+    以便查看ArrayList的底层扩容机制等。
+
+## 类图
+
+* 在类中右键->Diagrams。
+
+* 类图中的Properties显示的是类中getter/setter的字段。
+
+  即如果方法名为`getAbcd`或`setAbcd`，Abcd会被算作Properties。
