--- a/19.集合 Collection接口.md
+++ b/19.集合 Collection接口.md
@@ -1,4 +1,4 @@
-# 集合
+# 集合1
 
 ​	可以动态保存任意多个对象的容器，提供了一系列进行增删改查等操作的方法。
 
@@ -12,7 +12,7 @@
     * LinkedList
 
   * Set
-    * ​	TreeSet
+    * TreeSet
     * HashSet
 * Map接口：双列集合，以键值对形式存储。
   * HashMap
@@ -375,7 +375,7 @@ System.out.println(list.contains("jack")); // false
 
     返回类型为boolean，如果添加成功返回true，失败返回false。
 
-### HashSet
+### HashSet类
 
 ​	HashSet是Set接口的实现类。
 
@@ -395,10 +395,19 @@ System.out.println(list.contains("jack")); // false
 
   * 结论：
     1. 添加元素：计算hash值->将hash值转化成索引值。
+    
     2. 在存储表table中，找到索引位置。
+    
     3. 如果索引位置没有元素，直接添加。如果有元素，则调用equals方法进行比较，true则放弃添加，false则添加到最后。
-    4. 如果table数组元素中的链表有一条到达TREEIFY_THRSHOLD（8），且table的length超过MIN_TREEIFY_CAPACITY（64），就会被树化为红黑树。
-
+    
+    4. table数组扩容：第一次扩容到16个元素，每当size达到加载因子loadFactor，即当前容量的0.75时，会再次扩容，容量*2。
+    
+       这里size是集合中有效元素的个数，即包括数组中的和链表上的所有节点。
+    
+    5. 如果table数组元素中的链表有一条到达TREEIFY_THRSHOLD（8），且table的length超过MIN_TREEIFY_CAPACITY（64），该元素的链表就会被树化为红黑树。
+    
+    6. 判断两对象是否相等的逻辑均为：`e.hash == hash && ((k = e.key) == key || (key != null && key.equals(k))))`，即定义类的对象添加至HashSet中是否算作同一对象时，必须同时重写**equals和hashCode方法**。
+    
   * add(Object o)源码分析：
 
     * HashMap的put方法需要key和value两个参数。HashSet中key为传入的对象o，所有value都会使用PRESENT进行占位。
@@ -462,6 +471,7 @@ System.out.println(list.contains("jack")); // false
                           // key加入到该链表的最后。
                           p.next = newNode(hash, key, value, null);
                           // 是否达到树化为红黑树的条件。TREEIFY_THRESHOLD为8。
+                          // 如果满足树化条件，则将p链表树化为红黑树。
                           if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
                               treeifyBin(tab, hash);
                           break;
@@ -482,22 +492,119 @@ System.out.println(list.contains("jack")); // false
               }
           }
           ++modCount;
-          if (++size > threshold)
+          if (++size > threshold) // 比较size和threshold，超过即进行扩容。
               resize();
           afterNodeInsertion(evict); // HashMap留给子类的方法，HashMap中该方法为空。
           return null; // 返回null代表添加成功。
       }
-      ```
-
-      * 在树化时还会进行判断：
-
-        即table的length如果<64，只进行数组扩容，不进行树化。
-
+    ```
+      
+    * 在树化时还会进行判断：
+      
+      即table的length如果<64，只进行数组扩容，不进行树化。
+      
         ```java
         if (tab == null || (n = tab.length) < MIN_TREEIFY_CAPACITY) // MIN_TREEIFY_CAPACITY为64。
             resize();
-        ```
-
-        
-
+    ```
     
+
+* 只有当hashCode相等且equals返回为true时，hashSet才会判定为同一对象。因此自定义类时，如果需要hashSet认为两对象相同从而不进行重复存储，需要使其hashCode返回值相等，且equals方法返回为true。
+
+  ```java
+  // 要求：Employee类只要name和age相同，在HashSet中就不重复存储。
+  // 需要同时重写equals和hashCode方法。
+  class Employee {
+      public String name;
+      public int age;
+  
+      public Employee(String name, int age) {
+          this.name = name;
+          this.age = age;
+      }
+  
+      @Override
+      public boolean equals(Object o) {
+          // 定义只要name和age字段相同，则返回true。
+          if (this == o) return true;
+          if (o == null || getClass() != o.getClass()) return false;
+          Employee employee = (Employee) o;
+          return age == employee.age && name.equals(employee.name);
+      }
+  
+      @Override
+      public String toString() {
+          return "Employee{" +
+                  "name='" + name + '\'' +
+                  ", age=" + age +
+                  '}';
+      }
+  
+      @Override
+      public int hashCode() {
+          // 定义hashCode通过name和age字段计算得出。
+          return Objects.hash(name, age);
+      }
+  }
+  ```
+
+### LinkedHashSet类
+
+​	LinkedHashSet是HashSet的子类，也实现了Set接口。
+
+* LinkedHashSet底层使用LinkHashMap保存数据，底层维护了一个数组+双向链表。
+
+* 不允许添加重复元素。
+
+* LinkedHashSet根据元素的hashCode决定元素的存储位置，同时使用链表维护元素的顺序，使得元素可以以插入顺序被取出。
+
+* LinkedHashSet源码分析：
+
+  * LinkedHashSet通过super调用父类HashSet构造器，创建LinkedHashMap存储数据。
+
+    ```java
+    HashSet(int initialCapacity, float loadFactor, boolean dummy) {
+        map = new LinkedHashMap<>(initialCapacity, loadFactor);
+    }
+    ```
+
+  * LinkedHashMap存储数据节点使用的类型是Entry，是Node的子类。
+
+    ```java
+    static class Entry<K,V> extends HashMap.Node<K,V> {
+        Entry<K,V> before, after;
+        Entry(int hash, K key, V value, Node<K,V> next) {
+            super(hash, key, value, next);
+        }
+    }
+    ```
+
+    * HashMap存放数据链表的数组table类型为Node，这里的Entry是Node的子类，因此也可以放入，用的是多态数组。
+    * Entry与Node相比，增加了before和after属性，即在原先邻接表的基础上，通过这两个属性来记录元素的添加顺序。
+  
+  * LinkedHashMap重写了newNode方法，在创建新节点时创建Entry类型节点，并通过linkNodeLast维护节点的before、after属性。
+  
+    ```java
+    Node<K,V> newNode(int hash, K key, V value, Node<K,V> e) {
+        LinkedHashMap.Entry<K,V> p =
+            new LinkedHashMap.Entry<>(hash, key, value, e);
+        linkNodeLast(p);
+        return p;
+    }
+    ```
+  
+    ```java
+    private void linkNodeLast(LinkedHashMap.Entry<K,V> p) {
+        LinkedHashMap.Entry<K,V> last = tail;
+        tail = p;
+        if (last == null)
+            head = p;
+        else {
+            p.before = last;
+            last.after = p;
+        }
+    }
+    ```
+
+
+
